fix: add extra padding for pages and make footer depend on navbar color

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,4 +7,5 @@ body {
 
 .router-content {
     min-height: 100vh;
+    padding-bottom: 5rem;
 }
