--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,5 +1,4 @@
 .page-footer {
-    background-color: var(--bs-ieee-bright-blue);
     color: white;
 }
 
